--- a/index.html
+++ b/index.html
@@ -5,22 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>landing Page</title>
 </head>
 <body>
     <div class="header">
         <div class="logo">Header Logo</div>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>    
         </div>
     <div class="second-section">
-        <div class="main-title">This website is awesome</div>
-        <div class="subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>  
-        <button>Sign up</button>
+        <div class="text-container">
+            <div class="main-title">This website is awesome</div>
+            <div class="subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>  
+            <button>Sign up</button>
+        </div>    
         <div class="image">this is a placeholder for image</div>
-    </div>        
+    </div>  
+    <div class="third-section">
+        <div class="main-title-two">Some random information.</div>
+        <div class="sub-images">
+            <div class="sub-image">
+                <div class="box"></div>
+                <div class="subtext">this is some subtext under an ilustration image</div>
+            </div>
+            <div class="sub-image">
+                <div class="box"></div>
+                <div class="subtext">this is some subtext under an ilustration image</div>
+            </div>
+            <div class="sub-image">
+                <div class="box"></div>
+                <div class="subtext">this is some subtext under an ilustration image</div>
+            </div>
+            <div class="sub-image">
+                <div class="box"></div>
+                <div class="subtext">this is some subtext under an ilustration image</div>
+            </div>
+        </div>
+        
+    </div>   
+    <div class="quote">
+        <div class="testimonial"> This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice </div>
+        <div class="author">Thor</div>
+    </div>
+    
+    <div class="call">
+        <div class="text">Call to action! It's time!</div>
+        <div class="sub-call">Sign up for our product by clicking that button right over there!</div>
+        <div class="button"><button>Sign up</button></div>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>    
 </body> 
 </html>
