--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="text-container">
             <div class="main-title">This website is awesome</div>
             <div class="subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</div>  
-            <button>Sign up</button>
+            <div class="first-signup"><button>Sign up</button></div>
         </div>    
         <div class="image">this is a placeholder for image</div>
     </div>  
@@ -32,32 +32,34 @@
         <div class="sub-images">
             <div class="sub-image">
                 <div class="box"></div>
-                <div class="subtext">this is some subtext under an ilustration image</div>
+                <div class="sub-text">this is some subtext under an ilustration image</div>
             </div>
             <div class="sub-image">
                 <div class="box"></div>
-                <div class="subtext">this is some subtext under an ilustration image</div>
+                <div class="sub-text">this is some subtext under an ilustration image</div>
             </div>
             <div class="sub-image">
                 <div class="box"></div>
-                <div class="subtext">this is some subtext under an ilustration image</div>
+                <div class="sub-text">this is some subtext under an ilustration image</div>
             </div>
             <div class="sub-image">
                 <div class="box"></div>
-                <div class="subtext">this is some subtext under an ilustration image</div>
+                <div class="sub-text">this is some subtext under an ilustration image</div>
             </div>
         </div>
         
     </div>   
     <div class="quote">
-        <div class="testimonial"> This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice </div>
-        <div class="author">Thor</div>
+        <div class="testimonial"><em> This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</em></div>
+        <div class="author"><em>Thor</em></div>
     </div>
     
     <div class="call">
-        <div class="text">Call to action! It's time!</div>
-        <div class="sub-call">Sign up for our product by clicking that button right over there!</div>
-        <div class="button"><button>Sign up</button></div>
+        <div class="text-oof-call">
+            <div class="text">Call to action! It's time!</div>
+            <div class="sub-call">Sign up for our product by clicking that button right over there!</div>
+        </div>
+            <div class="button"><button>Sign up</button></div>
     </div>
     <div class="footer">
         Copyright © The Odin Project 2021
